[package]
name = "clubstatusd"
description = """
An HTTP API which allows the folks in your hackerspace to track it's status, with privacy enabled. Features: ternary status (public, private, closed), announcements (who's coming, talks, etc), presence (who's in the space), restricted public API
"""
version = "0.4.0"
authors = ["clonejo <clonejo@shakik.de>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://gitlab.aachen.ccc.de/clubstatus/clubstatusd"
keywords = ["spaceapi"]

[dependencies]
chrono = "0.4.0"
clap = "3.1.2"
cookie = "0.15.1"
config = "0.9.3"
float-cmp = "0.9.0"
icalendar = "0.11.0"
regex = "1.1.0"
rocket = "0.5.0-rc.1"
rocket-basicauth = "2.1.1"
rumqttc = "0.10.0"
rusqlite = "0.14.0"
serde = "1.0.98"
serde_json = "1.0.40"
sodiumoxide = "0.2.0"
spaceapi = "0.7.0"
time = "0.2.23"
uuid = { version = "0.8.2", features = ["v4", "v5"] }
