[package]
name = "clubstatusd"
description = """
An HTTP API which allows the folks in your hackerspace to track it's status, with privacy enabled. Features: ternary status (public, private, closed), announcements (who's coming, talks, etc), presence (who's in the space), restricted public API
"""
version = "0.4.1"
authors = ["clonejo <clonejo@shakik.de>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://gitlab.aachen.ccc.de/clubstatus/clubstatusd"
keywords = ["spaceapi"]

[dependencies]
chrono = "0.4.0"
clap = "3.1.2"
cookie = "0.16.0"
config = "0.13.0"
float-cmp = "0.9.0"
icalendar = "0.13.1"
regex = "1.1.0"
rocket = "0.5.0-rc.1"
rocket-basicauth = "2.1.1"
rumqttc = "0.15.0"
rusqlite = "0.28.0"
serde = "1.0.98"
serde_json = "1.0.40"
sodiumoxide = "0.2.0"
spaceapi = "0.7.0"
time = "0.3.14"
uuid = { version = "1.1.2", features = ["v4", "v5"] }
