[package]
name = "clubstatus-types"
version = "0.4.2"
authors = ["clonejo <clonejo@shakik.de>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://gitlab.aachen.ccc.de/clubstatus/clubstatusd"

[dependencies]
chrono = "0.4.0"
serde = "1.0.98"
url = { version = "2.5.4", features = ["serde"] }

rusqlite = { version = "0.28.0", features = ["url"], optional = true }
